# bedrux

./: .gitignore  README.md  pyproject.toml  setup  setup.sh
bedrux_tui/: __init__.py  app.py  backup.py  bedrux.py  config.py  controller.py  downloader.py  installations.py  log_buffer.py  screens.py  stats.py  styles.tcss  util.py  widgets.py
src/: .box64rc  bedrock_server_manager.sh  box64.sh  minecraft_version.sh  setup.sh  svm
