[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrux"
version = "1.0.0"
description = "Terminal UI for managing Minecraft Bedrock Server instances (Bedrux)."
readme = "README.md"
requires-python = ">=3.12"
authors = [ { name = "theonuverse" } ]
license = "MIT"
keywords = ["bedrock", "minecraft", "server", "android", "linux", "tui", "textual"]

# Minimal (empty) dependencies — add concrete packages if you want them pinned.
dependencies = [
    "textual>=0.20.0",
    "aiohttp>=3.8",
    "psutil>=5.9",
    "rich>=12.0",
]

[project.scripts]
bedrux = "bedrux_tui.bedrux:main"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["bedrux_tui*"]

[tool.setuptools.package-data]
"bedrux_tui" = ["styles.tcss"]
